--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BuscarProductoActivity"></activity>
+        <activity android:name=".Ordenar"></activity>
+        <activity android:name=".BuscarProductoActivity" />
         <activity android:name=".ListaTiendasCercanasActivity" />
         <activity
             android:name=".HomeActivity"
