--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetalleTiendaActivity"></activity>
+        <activity android:name=".DetallePedidoActivity"></activity>
+        <activity android:name=".MisPedidoActivity" />
+        <activity android:name=".DetalleTiendaActivity" />
         <activity android:name=".ConfirmarPedidoActivity" />
         <activity android:name=".view.Implement.CarritoActivity" />
         <activity android:name=".view.Implement.DetalleProductoActivity" />
