--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,12 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
 
     implementation 'com.squareup.picasso:picasso:2.5.0'
+    implementation 'com.google.android.gms:play-services-location:10.+'
+    implementation 'com.google.android.gms:play-services:11.0.0'
+    implementation('com.mapbox.mapboxsdk:mapbox-android-sdk:2.2.0@aar') {
+        transitive = true
+    }
+
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 
 }
