--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.encuentraloya">
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+
+    <permission
+        android:name="your app package name.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="your app package name.permission.MAPS_RECEIVE" />
 
     <application
         android:name=".comun.MyApp"
@@ -13,7 +28,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.Implement.DetallePedidoActivity"></activity>
+        <activity android:name=".view.Implement.MyNegocioActivity"></activity>
+        <activity android:name=".RegistaraNegocioActivity"></activity>
+        <activity android:name=".RegistrarUbicacionTiendaActivity"></activity>
+        <activity android:name=".view.Implement.DetallePedidoActivity" />
         <activity android:name=".view.Implement.MisPedidoActivity" />
         <activity android:name=".view.Implement.DetalleTiendaActivity" />
         <activity android:name=".view.Implement.ConfirmarPedidoActivity" />
@@ -21,21 +39,34 @@
         <activity android:name=".view.Implement.DetalleProductoActivity" />
         <activity android:name=".view.Implement.CambiarContraseniaActivity" />
         <activity android:name=".view.Implement.OrdernarActivity" />
-        <activity android:name=".view.Implement.PerfilActivity" />
+        <activity android:name=".view.Implement.PerfilActivity" >
+
+        </activity>
+
         <activity android:name=".view.Implement.BuscarProductoActivity" />
-        <activity android:name=".view.Implement.ListaTiendasCercanasActivity" />
+        <activity android:name=".view.Implement.ListaTiendasCercanasActivity">
+        </activity>
         <activity
             android:name=".view.Implement.HomeActivity"
-            android:label="@string/title_activity_home" >
+            android:label="@string/title_activity_home" />
+        <activity android:name=".view.Implement.RecoverAccountActivity" />
+        <activity android:name=".view.Implement.RegisterUsuarioActivity" />
+        <activity android:name=".view.Implement.LoginActivity" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.Implement.RecoverAccountActivity" />
-        <activity android:name=".view.Implement.RegisterUsuarioActivity" />
-        <activity android:name=".view.Implement.LoginActivity">
-        </activity>
+
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyAn-gjj5dDqro4bXwdF3EDfA_2fgR6rLvw" />
     </application>
 
 </manifest>
