--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.encuentraloya"
-        minSdkVersion 22
+        minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -23,10 +23,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.0.0'
+
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+
+    implementation 'com.android.support:mediarouter-v7:26.1.0'
+
+    implementation 'com.android.support:animated-vector-drawable:26.1.0'
+    implementation 'com.android.support:support-vector-drawable:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:support-vector-drawable:26.1.0'
+
     testImplementation 'junit:junit:4.12'
 
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
@@ -43,6 +49,7 @@ dependencies {
     implementation('com.mapbox.mapboxsdk:mapbox-android-sdk:2.2.0@aar') {
         transitive = true
     }
+
 
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.1.4'
