--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,14 @@
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <permission
@@ -28,43 +29,38 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.Implement.EstadisticaActivity">
-
-        </activity>
-        <activity android:name=".view.Implement.MyNegocioActivity"></activity>
-        <activity android:name=".RegistaraNegocioActivity" />
-        <activity android:name=".RegistrarUbicacionTiendaActivity" />
-        <activity android:name=".view.Implement.DetallePedidoActivity" />
-        <activity android:name=".view.Implement.MisPedidoActivity"></activity>
-        <activity android:name=".view.Implement.DetalleTiendaActivity" />
-        <activity android:name=".view.Implement.ConfirmarPedidoActivity" />
-        <activity android:name=".view.Implement.CarritoActivity" >
-
-
-        </activity>
-
-
-        <activity android:name=".view.Implement.DetalleProductoActivity" />
-        <activity android:name=".view.Implement.CambiarContraseniaActivity" />
-        <activity android:name=".view.Implement.OrdernarActivity" />
-        <activity android:name=".view.Implement.PerfilActivity"></activity>
-        <activity android:name=".view.Implement.BuscarProductoActivity" >
+        <activity android:name=".view.Implement.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-
-        <activity android:name=".view.Implement.ListaTiendasCercanasActivity"></activity>
-        <activity
-            android:name=".view.Implement.HomeActivity"
-            android:label="@string/title_activity_home">
 
         </activity>
+
+
+        <activity android:name=".view.Implement.MensajeConfirmacionActivity" />
+        <activity android:name=".view.Implement.LoginActivity">
+
+        </activity>
+        <activity android:name=".view.Implement.ConfirmarPedidoActivity" />
+        <activity android:name=".view.Implement.HomeActivity" />
+        <activity android:name=".view.Implement.CarritoActivity" />
+        <activity android:name=".view.Implement.EstadisticaActivity" />
+        <activity android:name=".view.Implement.PerfilActivity" />
+        <activity android:name=".view.Implement.DetallePedidoActivity" />
+        <activity android:name=".view.Implement.MisPedidoActivity" />
+        <activity android:name=".view.Implement.CambiarContraseniaActivity" />
+        <activity android:name=".view.Implement.MyNegocioActivity" />
+        <activity android:name=".RegistaraNegocioActivity" />
+        <activity android:name=".view.Implement.ListaTiendasCercanasActivity" />
         <activity android:name=".view.Implement.RecoverAccountActivity" />
+        <activity android:name=".view.Implement.BuscarProductoActivity" />
+        <activity android:name=".view.Implement.OrdernarActivity" />
+        <activity android:name=".view.Implement.DetalleProductoActivity" />
+        <activity android:name=".view.Implement.DetalleTiendaActivity" />
         <activity android:name=".view.Implement.RegisterUsuarioActivity" />
-        <activity android:name=".view.Implement.LoginActivity"></activity>
+        <activity android:name=".RegistrarUbicacionTiendaActivity" />
 
         <meta-data
             android:name="com.google.android.gms.version"
